--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-minify": "^0.5.0",
     "css-loader": "^4.3.0",
+    "eslint": "^7.11.0",
     "file-loader": "^6.1.1",
     "jest": "^26.5.2",
     "prettier": "^2.1.2",
