--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.1.2",
     "prettier-webpack-plugin": "^1.2.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^4.2.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
