--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 12
       - run: npm install
-      - run: npm run test -- --coverage --watchAll=false
+      - run: npm run test
 
       - name: Setup GIT
         run: |
