--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@hodgef/js-library-boilerplate-basic",
-  "version": "1.5.136",
+  "version": "1.6.0",
   "description": "Javascript Minimal Starter Kit for building libraries",
   "main": "build/index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --config webpack.config.demo.js",
     "build": "webpack",
+    "build:demo": "webpack --config webpack.config.demo.js",
     "test": "jest",
     "prepare": "npm run build",
     "trypublish": "npm publish || true"
@@ -37,7 +38,10 @@
     "css-loader": "^6.4.0",
     "eslint": "^8.0.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.3.1",
+    "mini-css-extract-plugin": "^2.4.2",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.4.1",
     "prettier-webpack-plugin": "^1.2.0",
     "style-loader": "^3.3.0",
