--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run coverage
+          npm run test -- --coverage --watchAll=false
 
       - name: Setup GIT
         run: |
